--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lpu-cse",
   "version": "0.1.0",
-  "homepage": "https://sauravhathi.github.io/lpu-cse",
+  "homepage": "https://sauravhathi.github.io/lpu-cse/",
   "author": {
     "name": "Saurav Hathi"
   },
