--- a/.gitignore
+++ b/.gitignore
@@ -2,22 +2,22 @@
 
 # dependencies
 /node_modules
-# /.pnp
-# .pnp.js
+/.pnp
+.pnp.js
 
 # # testing
-# /coverage
+/coverage
 
 # production
-# /build
+/build
 
 # misc
-# .DS_Store
-# .env.local
-# .env.development.local
-# .env.test.local
-# .env.production.local
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# npm-debug.log*
-# yarn-debug.log*
-# yarn-error.log*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
